# rtc-tools

./: .codecov.yml  .coveragerc  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AUTHORS  CONTRIBUTING.md  README.md  RELEASE_NOTES.md  pyproject.toml  setup.cfg  setup.py  sonar-project.properties  tox.ini
.github/actions/setup-python/: action.yml
.github/workflows/: ci.yml  rtc-tools.yml
doc/: conf.py  getting-started.rst  index.rst  related-projects.rst  requirements.txt
doc/examples/: optimization.rst
doc/examples/optimization/: basic.rst  cascading_channels.rst  channel_pulse.rst  channel_wave_damping.rst  debugging.rst  ensemble.rst  fallback_options.rst  goal_programming.rst  lookup_table.rst  mixed_integer.rst  pumped_hydropower_system.rst
doc/examples/pyplots/: basic_results.py  cascading_channels_results.py  channel_pulse_results.py  channel_wave_damping.py  ensemble_results.py  goal_programming_results.py  integrator_delay.py  lookup_table_results.py  mixed_integer_results.py  pumped_hydropower_system_results.py  simulation_results.py
doc/examples/simulation/: setpoint.rst
doc/optimization/: basics.rst  lookup_tables.rst  multi_objective.rst
examples/basic/src/: example.py
src/rtctools/: _version.py  rtctoolsapp.py  util.py
tests/: test_case.py
tests/data/: test_csv.py  test_data.py  test_diag.py  test_interpolate.py  test_netcdf.py  test_storage.py
tests/examples/: test_examples.py
tests/internal/: test_alias_tools.py
tests/optimization/: test_control_tree_mixin.py  test_csv_lookuptable_mixin.py  test_csv_mixin.py  test_debug_checks.py  test_delay_expressions.py  test_goal_programming.py  test_integration.py  test_interpolation.py  test_io_mixin.py  test_linearized_order_goal_programming_mixin.py  test_min_abs_goal_programming.py  test_modelica_mixin.py  test_multiple_io_mixins.py  test_netcdf_mixin.py  test_optimization_problem.py  test_path_extra_variables.py  test_pi_mixin.py  test_planning_and_control_tree_mixin.py  test_planning_mixin.py  test_problem_class_check.py  test_single_pass_goal_programming.py  test_solvers.py  test_timeseries.py  test_vector_constraints_variables.py  test_vector_goals.py
tests/simulation/: test_csv_mixin.py  test_io_mixin.py  test_pi_mixin.py  test_problem_class_check.py  test_simulation.py
(+80 files in other folders)
